// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingContainer render child 1`] = `
<div>
  child
</div>
`;

exports[`LoadingContainer render loading 1`] = `
<div
  className="is-full-height loading-container"
>
  <div
    className="loading-indicator"
  >
    <LoadingAnimation />
    CARREGANDO
    ...
  </div>
</div>
`;

exports[`LoadingContainer render loading custom text 1`] = `
<div
  className="is-full-height loading-container"
>
  <div
    className="loading-indicator"
  >
    <LoadingAnimation />
    CARREGANDO DADOS
    ...
  </div>
</div>
`;

exports[`LoadingStateContainer render failure 1`] = `
<div
  className="is-full-height loading-error-container"
>
  <div
    className="loading-error"
  >
    <p>
      Ocorreu um erro ao requisitar os dados do servidor.
    </p>
    <p>
      Cheque sua conexão e atualize a página para tentar novamente.
    </p>
  </div>
</div>
`;

exports[`LoadingStateContainer render request 1`] = `
<LoadingContainer
  isFetching={true}
  loadingText="CARREGANDO"
>
  Content if successful
</LoadingContainer>
`;

exports[`LoadingStateContainer render success 1`] = `
<LoadingContainer
  isFetching={false}
  loadingText="CARREGANDO"
>
  Content if successful
</LoadingContainer>
`;
